--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-drawer-layout": "^2.0.0",
     "react-native-slider": "^0.11.0",
     "react-native-web": "^0.6.1",
+    "react-native-web-extended": "^0.0.7",
     "react-native-web-lists": "^0.1.1",
     "react-native-web-modal": "^1.0.1",
     "react-native-web-statusbar": "^0.0.0",
